@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.download.irfree"
        name="IRFree.com"
-       version="0.2.0"
+       version="0.2.1"
        provider-name="pgoeri">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
